[project]
name = "lora-info"
description = "Shows Lora information from CivitAI and outputs trigger words and example prompt"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/jitcoder/lora-info"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jitcoder"
DisplayName = "lora-info"
Icon = ""
